[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tz-overlap"
version = "0.1.0"
description = "Find overlapping working hours across timezones for distributed teams"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "LoopDesk", email = "eng@loopdesk.dev" },
]
keywords = ["timezone", "overlap", "distributed", "async", "remote-work", "scheduling"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]

[project.scripts]
tz-overlap = "tz_overlap.cli:main"

[project.urls]
Homepage = "https://github.com/Majny/tz-overlap"
Repository = "https://github.com/Majny/tz-overlap"
Issues = "https://github.com/Majny/tz-overlap/issues"

[tool.hatch.build.targets.sdist]
include = [
    "tz_overlap/",
    "tests/",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
